added tabs to design

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,9 @@
 <ion-content>
   <div class="home-container">
-    <div padding>
-      <ion-button round routerLink='/login' expand='block' color="primary">Login</ion-button>
-      <ion-button round routerLink='/register' expand='block' color="primary">Sign Up</ion-button>
-      <ion-button round routerLink='/about' expand='block' color="primary">About Us</ion-button>
+    <div>
+      <ion-button margin shape="round" routerLink='/login' expand='block' color="light" fill="outline">Login</ion-button>
+      <ion-button margin shape="round" routerLink='/register' expand='block' color="light" fill="outline">Sign Up</ion-button>
+      <ion-button margin shape="round" routerLink='/about' expand='block' color="light" fill="outline">About Us</ion-button>
     </div>
   </div>
 </ion-content>
