--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -9,6 +9,7 @@
 
 <ion-content padding>
   <ion-list>
+    <!--full name field-->
     <ion-item-divider>
       <ion-label>
         <ion-text color="dark">
@@ -19,6 +20,52 @@
     <ion-item>
       <ion-input required type="text" placeholder="Renjith"></ion-input>
     </ion-item>
+    <!--adhaar id field-->
+    <ion-item-divider>
+      <ion-label>
+        <ion-text color="dark">
+          <h2>ADHAAR NUMBER</h2>
+        </ion-text>
+      </ion-label>
+    </ion-item-divider>
+    <ion-item>
+      <ion-input required type="text" placeholder="Adhaar No"></ion-input>
+    </ion-item>
+    <!--farm area field-->
+    <ion-item-divider>
+      <ion-label>
+        <ion-text color="dark">
+          <h2>FARM AREA (in Acre)</h2>
+        </ion-text>
+      </ion-label>
+    </ion-item-divider>
+    <ion-item>
+      <ion-input required type="number" placeholder="1"></ion-input>
+    </ion-item>
+    <!--select agriculture items-->
+    <ion-item-divider>
+      <ion-label>
+        <ion-text color="dark">
+          <h2>CULTIVATING ITEMS</h2>
+        </ion-text>
+      </ion-label>
+    </ion-item-divider>
+    <ion-item>
+      <ion-label>Items</ion-label>
+      <ion-select multiple="true" cancelText="Nah" okText="Okay!" placeholder="Selct from the list">
+        <ion-select-option value="bacon">Bacon</ion-select-option>
+        <ion-select-option value="olives">Black Olives</ion-select-option>
+        <ion-select-option value="xcheese">Extra Cheese</ion-select-option>
+        <ion-select-option value="peppers">Green Peppers</ion-select-option>
+        <ion-select-option value="mushrooms">Mushrooms</ion-select-option>
+        <ion-select-option value="onions">Onions</ion-select-option>
+        <ion-select-option value="pepperoni">Pepperoni</ion-select-option>
+        <ion-select-option value="pineapple">Pineapple</ion-select-option>
+        <ion-select-option value="sausage">Sausage</ion-select-option>
+        <ion-select-option value="Spinach">Spinach</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <!--address field-->
     <ion-item-divider>
       <ion-label>
         <ion-text color="dark">
@@ -29,6 +76,7 @@
     <ion-item>
       <ion-textarea required type="text" placeholder="Ulloor , Trivandrum"></ion-textarea>
     </ion-item>
+    <!--location from map field-->
     <ion-item-divider>
       <ion-label>
         <ion-text color="dark">
