--- a/src/app/shared/components/location-modal/location-modal.component.html
+++ b/src/app/shared/components/location-modal/location-modal.component.html
@@ -10,5 +10,6 @@
 </ion-header>
 
 <ion-content>
-  <google-maps></google-maps>
+    <div *ngIf="loading">Loading...</div>
+    <google-maps [hidden]='loading' (onError)='onMapError($event)' (onSuccess)='onMapSuccess($event)'></google-maps>
 </ion-content>
