--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,8 +1,20 @@
-<ion-tabs>
+<ion-tabs color='primary'>
   <ion-tab label="Device" icon="home" href="/user/tabs/(device:device)">
     <ion-router-outlet name="device"></ion-router-outlet>
   </ion-tab>
   <ion-tab label="About" icon="information-circle" href="/user/tabs/(about:about)">
     <ion-router-outlet name="about"></ion-router-outlet>
+  </ion-tab>
+  <ion-tab label="Device List" icon="information-circle" href="/user/tabs/(device-list:device-list)">
+    <ion-router-outlet name="device-list"></ion-router-outlet>
+  </ion-tab>
+  <ion-tab label="Recycle Form" icon="information-circle" href="/user/tabs/(recycle-form:recycle-form)">
+    <ion-router-outlet name="recycle-form"></ion-router-outlet>
+  </ion-tab>
+  <ion-tab label="Products" icon="information-circle" href="/user/tabs/(products:products)">
+    <ion-router-outlet name="products"></ion-router-outlet>
+  </ion-tab>
+  <ion-tab label="Orders" icon="information-circle" href="/user/tabs/(orders:orders)">
+    <ion-router-outlet name="orders"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
