--- a/src/app/device-data/device-data.page.html
+++ b/src/app/device-data/device-data.page.html
@@ -16,37 +16,28 @@
         </ion-text>
         <p>Add your device ip in this field</p>
       </ion-label>
-
     </ion-item>
 
     <ion-item>
-      <ion-input placeholder="192.168.0.1"></ion-input>
-      <ion-fab-button (click)='onChangeStatus()'>
+      <ion-input placeholder="192.168.0.1" [(ngModel)]="ip"></ion-input>
+      <ion-fab-button (click)='onSync()'>
         <ion-icon name="flash"></ion-icon>
       </ion-fab-button>
     </ion-item>
   </ion-list>
 
-  <div [ngSwitch]="currentStatus">
-    <ion-card color='success' *ngSwitchCase='pollutionStatuses["Safe"]' padding>
-      <p>Signal Value : 90 PPM</p>
-      <h1>Fresh Air</h1>
-      <h2>Value less than 350 PPM is safe .</h2>
+  <div [ngSwitch]="sensor?.fillStatus">
+    <ion-card color='success' *ngSwitchCase='fillStatuses["Half"]' padding>
+      <h2>Less than 50% is filled </h2>
+      <h1>Odor is fine</h1>
+      <ion-button round fill="outline" color='light' (click)='onReport()'>Report</ion-button>
     </ion-card>
-    <ion-card color='warning' *ngSwitchCase='pollutionStatuses["Warning"]' padding>
-      <p>Signal Value : 1050 PPM</p>
-      <h1>Poor Air , Open Windows </h1>
-      <h2>Value greater than 1000 PPM cause Headache , sleepiness and stagnant , stale , stuffy air .</h2>
-      <ion-button round fill="outline" color='dark' (click)='onReport()'>Report</ion-button>
+    <ion-card color='danger' *ngSwitchCase='fillStatuses["Full"]' padding>
+      <h2>More than 50% is filled </h2>
+      <h1>Odor is fine</h1>
+      <ion-button round fill="outline" color='light' (click)='onReport()'>Report</ion-button>
     </ion-card>
-    <ion-card color='danger' *ngSwitchCase='pollutionStatuses["Danger"]' padding>
-      <p>Signal Value : 2350 PPM</p>
-      <h1>Danger ! Move to fresh Air </h1>
-      <h2>Value greater than 1000 PPM cause Headache , sleepiness and stagnant , stale , stuffy air and if exceeds beyond
-        2000 PPM then it can cause increased heart rate and many other diseases .</h2>
-      <ion-button round fill="outline" color='secondary' (click)='onReport()'>Report</ion-button>
-    </ion-card>
-    <ion-card *ngSwitchDefault color='secondary' padding>
+    <ion-card *ngSwitchDefault color='light' padding>
       <h2>No value to display .</h2>
       <h3>Try syncing your device again .</h3>
     </ion-card>
