--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -1,7 +1,36 @@
-.login-container{
-    background-color:var(--ion-color-secondary);
-    display:flex;
+@import "../../theme/theme";
+:host {
+  .form-container {
+    background-color:kh-theme(light);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
+    padding: 50px 100px;
+
+  }
+  .form-header-container {
+    text-align: center;
+    margin: 2rem 0;
+    h2{
+        color:kh-theme(secondary);
+        letter-spacing: .2cm;
+        font-weight: bold;
+    }
+  }
+  .form-input-container {
+    ion-input {
+      margin-bottom: 2rem;
+      border: 1px solid kh-theme(secondary);
+      text-align: center;
+      border-radius: 64px;
+      color: kh-theme(secondary);
+    }
+  }
+  .form-action-container {
+    ion-button {
+      margin-bottom: 2rem;
+    }
+  }
 }
