--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>users</ion-title>
+  <ion-toolbar color='primary'>
+    <ion-title>Products</ion-title>
   </ion-toolbar>
 </ion-header>
 
